# cmake_demo

./: README.md
Mylib/: CMakeLists.txt  main.cpp
Mylib/cmake/: MyLibConfig.cmake  MylibConfig.cmake  MylibConfig.cmake.in  MylibConfigVersion.cmake  cmake_uninstall.cmake  cmake_uninstall.cmake.in
Mylib/include/: mylib.h
Mylib/src/: mylib.cpp
User/: CMakeLists.txt
